Changes made in homepage and compiler added

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6">
             <h4>Our Vision</h4>
-            <p class="article-content">Prepping the local lads for the global scene. The forth coming industrial revolution is a digital one. As we integrate with this revolution, let language be no hurdle(let's not be in limbo over the lingo). Descending this linguistic barrier, We aim at integrating the youth of Odisha with the revolution by empowering them with all the proficiency in digital technology with all the content in the local language, <b>ODIA</b>.</p>
+            <p class="article-content">Solving the problems of the people that we had faced ourselves is the main motto of our team. Our goal is to make it easier for the upcoming students to learn to code and excel in their lives. There is no better way to learn other than learning things in your own native language, <b>ODIA</b>. Thus, we aim at providing all the educational facilities at free of cost in our own native language.</p>
         </div>
     </div>
     <div class="row mt-3">
@@ -97,7 +97,7 @@
           <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601980099/Smita_Jha_mtrypb.jpg" class="rounded-circle z-depth-1"
             alt="Sample avatar" style="height: 65%; width: 65%; box-shadow: 5px 5px 20px rgb(66 77 84)">
         </div>
-        <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Smita Kumari Jha</h5>
+        <h5 class="font-weight-bold mt-4 mb-3" style="color: #00378a;">Smita Jha</h5>
         <p class="text-uppercase blue-text mb-0"><strong>Web Developer & Content Writer</strong></p>
         <p class="article-content" style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">IIIT Bhubaneswar</p>
         <ul class="list-unstyled mb-0">
