--- a/main/templates/main/explore.html
+++ b/main/templates/main/explore.html
@@ -3,6 +3,7 @@
 
 
 {% block content %}
+
 <div class="container mt-3 mb-3 section2" style="text-align: center">
     <h1 style="color:  #00378a;">Explore Our Courses</h1>
 </div>
@@ -24,33 +25,33 @@
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #1</h5>
-              <a href="#" class="badge badge-warning badge-pill">Trending</a>
+              <div href="#" class="badge badge-warning badge-pill">Trending</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><b>Topic: </b>introduction to Python </li>
-              <li class="list-group-item"><b>Creator: </b>Shreyas PJ</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to Python </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Rashmi Ranjan Das</li>
             </ul>
           </div>
           <div class="card" >
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #2</h5>
-              <a href="#" class="badge badge-danger badge-pill">Hot</a>
+              <div href="#" class="badge badge-danger badge-pill">Hot</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to Python </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Rashmi Ranjan Das</li>
             </ul>
           </div>
           <div class="card" >
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">Python Tutorial #3</h5>
-              <a href="#" class="badge badge-primary badge-pill">New</a>
+              <div href="#" class="badge badge-primary badge-pill">New</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to Python </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Rashmi Ranjan Das</li>
             </ul>
           </div>
     </div>
@@ -64,33 +65,33 @@
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #1</h5>
-              <a href="#" class="badge badge-warning badge-pill">Trending</a>
+              <div href="#" class="badge badge-warning badge-pill">Trending</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><b>Topic: </b>introduction to Python </li>
-              <li class="list-group-item"><b>Creator: </b>Shreyas PJ</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to C++ </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Sobhan Kumar Rath</li>
             </ul>
           </div>
           <div class="card" >
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #2</h5>
-              <a href="#" class="badge badge-danger badge-pill">Hot</a>
+              <div href="#" class="badge badge-danger badge-pill">Hot</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to C++ </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Sobhan Kumar Rath</li>
             </ul>
           </div>
           <div class="card" >
             <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
             <div class="card-body" style="text-align: center;">
               <h5 class="card-title">C++ Tutorial #3</h5>
-              <a href="#" class="badge badge-primary badge-pill">New</a>
+              <div href="#" class="badge badge-primary badge-pill">New</div>
             </div>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Cras justo odio</li>
-              <li class="list-group-item">Dapibus ac facilisis in</li>
+              <li class="list-group-item article-content"><b>Topic: </b>Introduction to C++ </li>
+              <li class="list-group-item article-content"><b>Instructor: </b>Sobhan Kumar Rath</li>
             </ul>
           </div>
     </div>
@@ -99,18 +100,94 @@
     </div>
     </div>
     <div class="mt-2 mb-4">
+      <h3 class="mt-3 mb-3">HTML Tutorials (In Odia)</h3>
+  <div class="card-deck">
+      <div class="card">
+          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <div class="card-body" style="text-align: center;">
+            <h5 class="card-title">HTML Tutorial #1</h5>
+            <div href="#" class="badge badge-warning badge-pill">Trending</div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item article-content"><b>Topic: </b>Introduction to HTML </li>
+            <li class="list-group-item article-content"><b>Instructor: </b>Pratik Mohanty</li>
+          </ul>
+        </div>
+        <div class="card" >
+          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <div class="card-body" style="text-align: center;">
+            <h5 class="card-title">HTML Tutorial #2</h5>
+            <div href="#" class="badge badge-danger badge-pill">Hot</div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item article-content"><b>Topic: </b>Introduction to HTML </li>
+            <li class="list-group-item article-content"><b>Instructor: </b>Pratik Mohanty</li>
+          </ul>
+        </div>
+        <div class="card" >
+          <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+          <div class="card-body" style="text-align: center;">
+            <h5 class="card-title">HTML Tutorial #3</h5>
+            <div href="#" class="badge badge-primary badge-pill">New</div>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item article-content"><b>Topic: </b>Introduction to HTML </li>
+            <li class="list-group-item article-content"><b>Instructor: </b>Pratik Mohanty</li>
+          </ul>
+        </div>
+  </div>
+  <div style="text-align: center">
+      <a href="#"><div class="btn btn-primary">Browse All</div></a>
+  </div>
+  </div>
+  <div class="mt-2 mb-4">
+    <h3 class="mt-3 mb-3">Arduino Tutorials (In Odia)</h3>
+<div class="card-deck">
+    <div class="card">
+        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <div class="card-body" style="text-align: center;">
+          <h5 class="card-title">Arduino Tutorial #1</h5>
+          <div href="#" class="badge badge-warning badge-pill">Trending</div>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item article-content"><b>Topic: </b>Introduction to Arduino </li>
+          <li class="list-group-item article-content"><b>Instructor: </b>Jaydeep Kanungo</li>
+        </ul>
+      </div>
+      <div class="card" >
+        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <div class="card-body" style="text-align: center;">
+          <h5 class="card-title">Arduino Tutorial #2</h5>
+          <div href="#" class="badge badge-danger badge-pill">Hot</div>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item article-content"><b>Topic: </b>Introduction to Arduino </li>
+          <li class="list-group-item article-content"><b>Instructor: </b>Jaydeep Kanungo</li>
+        </ul>
+      </div>
+      <div class="card" >
+        <iframe class="card-image-top" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+        <div class="card-body" style="text-align: center;">
+          <h5 class="card-title">Arduino Tutorial #3</h5>
+          <div href="#" class="badge badge-primary badge-pill">New</div>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item article-content"><b>Topic: </b>Introduction to Arduino </li>
+          <li class="list-group-item article-content"><b>Instructor: </b>Jaydeep Kanungo</li>
+        </ul>
+      </div>
+</div>
+<div style="text-align: center">
+    <a href="#"><div class="btn btn-primary">Browse All</div></a>
+</div>
+</div>
+    <div class="mt-2 mb-4">
         <h3 class="mt-3 mb-3">Coming Soon...</h3>
     <div class="card-deck">
         <div class="card">
           <img class="card-img-top" src="..." alt="Card image cap">
           <div class="card-body">
-            <h5 class="card-title">C Programming</h5>
-          </div>
-        </div>
-        <div class="card">
-          <img class="card-img-top" src="..." alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">Magic With HTML</h5>
+            <h5 class="card-title">Magic With CSS</h5>
           </div>
         </div>
         <div class="card">
