--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -100,7 +100,7 @@
 <div class="container-fluid section3 mt-5 mb-5 pc-card">
     <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 style="margin-bottom: 2%; color:black">Our Instructors</h1>
+        <h1 style="margin-bottom: 2%; color:black">Our Top Instructors</h1>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -108,13 +108,13 @@
             <div class="card__front">
               <div class="card card-01">
                 <div class="profile-box-01">
-                  <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" alt="Card image cap" style="height: 17rem;"> 
                 </div>
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-default text-uppercase">Explore</a>
+                  <h4 class="card-title">Sobhan Kumar Rath</h4>
+                  <p class="card-text article-content" style="font-family: cursive;">Finding Difficulty in Learning C++? Not Any More.</p>
+                  <div class="btn btn-default text-uppercase">Explore</div>
                 </div>
               </div>
             </div>
@@ -122,8 +122,8 @@
             <div class="card__back">
               <div class="card card-01">
                 <div class="card-body text-center">
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Sobhan Kumar Rath</h4>
+                  <p class="card-text article-content">You will surely have fun together while learning C++ with me. I always wanted to teach someone and i finally got a chance to do so.</p>
                 </div>
               </div>
             </div>
@@ -134,13 +134,13 @@
             <div class="card__front">
               <div class="card card-01">
                 <div class="profile-box-01">
-                  <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602006194/Team%20Photo/Jaydeep_rso4pg.jpg" alt="Card image cap" style="height: 17rem;">
                 </div>
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-default text-uppercase">Explore</a>
+                  <h4 class="card-title">Jaydeep Kanungo</h4>
+                  <p class="card-text article-content" style="font-family: cursive;">Get into the world of Arduino and Robotics with me. :)</p>
+                  <div  class="btn btn-default text-uppercase">Explore</div>
                 </div>
               </div>
             </div>
@@ -148,8 +148,8 @@
             <div class="card__back">
               <div class="card card-01">
                 <div class="card-body text-center">
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Jaydeep Kanungo</h4>
+                  <p class="card-text article-content">Working on robotics has always been my passion. Do you have the same feeling? Lets get started.</p>
                 </div>
               </div>
             </div>
@@ -160,13 +160,13 @@
             <div class="card__front">
               <div class="card card-01">
                 <div class="profile-box-01">
-                  <img class="card-img-top" src="https://images.pexels.com/photos/247599/pexels-photo-247599.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Card image cap">
+                  <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989922/Team%20Photo/Pratik_yrzqfz.jpg" alt="Card image cap" style="height: 17rem;">
                 </div>
                 <div class="card-body text-center">
                   <span class="badge-box"><i class="fa fa-check"></i></span>
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-default text-uppercase">Explore</a>
+                  <h4 class="card-title">Pratik Mohanty</h4>
+                  <p class="card-text article-content" style="font-family: cursive;">Wanna know Magic of Websites? Join me.</p>
+                  <div class="btn btn-default text-uppercase">Explore</div>
                 </div>
               </div>
             </div>
@@ -174,15 +174,16 @@
             <div class="card__back">
               <div class="card card-01">
                 <div class="card-body text-center">
-                  <h4 class="card-title">Mike Parker</h4>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <h4 class="card-title">Pratik Mohanty</h4>
+                  <p class="card-text article-content">Come and learn to create webpages from scratch and get into the magic of web development.</p>
+                  
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="container mt-4" style="text-align: center;">
+      <div class="container mt-5" style="text-align: center;">
         <a href="{% url 'about' %}"><div class="btn btn-primary">View All Members</div></a>
       </div>  
     </div>
@@ -192,25 +193,25 @@
 <div class="container-fluid section3 mt-5 mb-5 mobile-card">
     <div class="container mt-3">
     <div style="text-align: center;">
-        <h1 style="margin-bottom: 2%;">Our Instructors</h1>
+        <h1 style="margin-bottom: 2%;">Our Top Instructors</h1>
     </div>
     <div class="row">
         <div class="card">
-            <img class="card-img-top" src="https://www.ymgrad.com/media/default_user.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982252/Team%20Photo/Sobhan_c4gbad.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text article-content" style="font-family: cursive;">Finding Difficulty in Learning C++? Not Any More.</p>
             </div>
         </div>
         <div class="card">
-            <img class="card-img-top" src="https://www.ymgrad.com/media/default_user.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1602006194/Team%20Photo/Jaydeep_rso4pg.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text article-content" style="font-family: cursive;">Get into the world of Arduino and Robotics with me. :)</p>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="https://www.ymgrad.com/media/default_user.jpg" alt="Card image cap">
+            <img class="card-img-top" src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989922/Team%20Photo/Pratik_yrzqfz.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text article-content" style="font-family: cursive;">Wanna know Magic of Websites? Join me.</p>
             </div>
           </div>
       <div class="container mt-4" style="text-align: center;">
@@ -245,92 +246,67 @@
                 <div id="carousel-example-1" class="carousel no-flex testimonial-carousel slide carousel-fade" data-ride="carousel"
                     data-interval="false">
                     <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
+                      <div class="carousel-item active">
                         <div class="testimonial">
                         <div class="avatar mx-auto mb-4">
-                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid"
-                            alt="First sample avatar image">
-                        </div>
-                        <p style="font-family: cursive;">
-                            <i class="fas fa-quote-left"></i>Taking a big step from 10+2 to persue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
-                        </p>
-                        <h4 class="font-weight-bold">Anna Deynah</h4>
-                        <h6 class="font-weight-bold my-3">Founder at ET Company</h6>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star-half-alt blue-text"> </i>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="testimonial">
-                        <div class="avatar mx-auto mb-4">
-                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(31).jpg" class="rounded-circle img-fluid"
-                            alt="Second sample avatar image">
+                            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601988702/Team%20Photo/Bhabatosh_bpkwds.jpg" class="rounded-circle img-fluid"
+                            alt="Second sample avatar image" style="height: 23%; width: 23%">
                         </div>
                         <p style="font-family: cursive;">
                             <i class="fas fa-quote-left"></i>I had to go through so many courses and resources; with a messed up schedule. I believe with a good schedule and cleaner plan would have helped me even more. So, from my knowledge, We have gathered all the content you need to get started with your journey to code.  <i class="fas fa-quote-right"></i></p>
-                        <h4 class="font-weight-bold">Maria Kate</h4>
-                        <h6 class="font-weight-bold my-3">Photographer at Studio LA</h6>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
+                        <h4 class="font-weight-bold">Bhabatosh Mahanta</h4>
+                        <h6 class="font-weight-bold my-3">Founder & CEO</h6>
+                        </div>
+                      </div>
+                    <div class="carousel-item">
+                        <div class="testimonial">
+                        <div class="avatar mx-auto mb-4">
+                            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601982943/Team%20Photo/Rashmi_Ranjan_Das_uavlap.jpg" class="rounded-circle img-fluid"
+                            alt="First sample avatar image" style="height: 23%; width: 23%">
+                        </div>
+                        <p style="font-family: cursive;">
+                            <i class="fas fa-quote-left"></i>Taking a big step to persue higher studies and stepping into Engineering, I faced many problems while learning to code. At Pathapadha.in, We believe if good tutorials and elaborate resources are provided at a single place, Anyone can learn to code with ease.<b>"ଜୟ ଜଗନ୍ନାଥ"(Jay Jagannath)</b> <i class="fas fa-quote-right"></i>
+                        </p>
+                        <h4 class="font-weight-bold">Rashmi Ranjan Das</h4>
+                        <h6 class="font-weight-bold my-3">Co-Founder & Developer</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="testimonial">
                         <div class="avatar mx-auto mb-4">
-                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
-                            alt="Third sample avatar image">
+                            <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601980099/Smita_Jha_mtrypb.jpg" class="rounded-circle img-fluid"
+                            alt="Third sample avatar image" style="height: 23%; width: 23%">
                         </div>
                         <p style="font-family: cursive;">
                             <i class="fas fa-quote-left"></i>You will never know where your path will lead you to but you can definitely choose that path. I believe once you start showing dedication and do hardwork you can achieve anything in your life.<i class="fas fa-quote-right"></i></p>
-                        <h4 class="font-weight-bold">John Doe</h4>
-                        <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="fas fa-star blue-text"> </i>
-                        <i class="far fa-star blue-text"> </i>
+                        <h4 class="font-weight-bold">Smita Jha</h4>
+                        <h6 class="font-weight-bold my-3">Front-end Developer</h6>
                         </div>
                     </div>
                     <div class="carousel-item">
                       <div class="testimonial">
                       <div class="avatar mx-auto mb-4">
-                          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
-                          alt="Third sample avatar image">
+                          <img src="https://res.cloudinary.com/pathapadha-in/image/upload/v1601989516/Team%20Photo/Shovna_zvma0l.jpg" class="rounded-circle img-fluid"
+                          alt="Third sample avatar image" style="height: 23%; width: 23%">
                       </div>
                       <p style="font-family: cursive;">
                         <i class="fas fa-quote-left"></i>Never Give Up! Be consistent and keep practicing. Consistency in the right path is the key to success. We are there to help in making you consistent in your career path.<i class="fas fa-quote-right"></i></p>
-                      <h4 class="font-weight-bold">John Doe</h4>
-                      <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
-                      <i class="fas fa-star blue-text"> </i>
-                      <i class="fas fa-star blue-text"> </i>
-                      <i class="fas fa-star blue-text"> </i>
-                      <i class="fas fa-star blue-text"> </i>
-                      <i class="far fa-star blue-text"> </i>
+                      <h4 class="font-weight-bold">Shovna Panda</h4>
+                      <h6 class="font-weight-bold my-3">Front-end Designer</h6>
                       </div>
                    </div>
                   <div class="carousel-item">
                     <div class="testimonial">
                     <div class="avatar mx-auto mb-4">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle img-fluid"
-                        alt="Third sample avatar image">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle img-fluid"
+                        alt="Third sample avatar image" style="height: 23%; width: 23%">
                     </div>
                     <p style="font-family: cursive;">
                       <i class="fas fa-quote-left"></i>There are many students who come out of their schooling life from Odia Schools and thus it gets difficult for them to understand the concepts of programming. Keeping this in mind, Our team has come forward to help you all.<i class="fas fa-quote-right"></i></p>
-                    <h4 class="font-weight-bold">John Doe</h4>
-                    <h6 class="font-weight-bold my-3">Front-end Developer in NY</h6>
-                    <i class="fas fa-star blue-text"> </i>
-                    <i class="fas fa-star blue-text"> </i>
-                    <i class="fas fa-star blue-text"> </i>
-                    <i class="fas fa-star blue-text"> </i>
-                    <i class="far fa-star blue-text"> </i>
+                    <h4 class="font-weight-bold">Suman Patra</h4>
+                    <h6 class="font-weight-bold my-3">Front-End Designer</h6>
                     </div>
-                  </div>
+                  </div> 
                     </div>
                     <a class="carousel-control-prev left carousel-control" href="#carousel-example-1" role="button"
                     data-slide="prev">
